# lightecho-blog

./: README.md  generate.sh  hugo.toml  pelicanconf.py  publishconf.py  pyproject.toml
content/: dashboard.md
content/posts/: lightecho-price-oracle-stellar-soroban.md  my-first-post.md  oracle-methodology.md  stellar-oracle-official-launch.md  stellar-oracle-shortfalls.md  stellar-price-vs-ripple.md  stellar-xlm-price-2024.md  xlmvol30-calculation.md
output/: annoucing-stellar-lightecho-stellar-oracle-for-soroban.html  archives.html  authors.html  categories.html  five-reasons-why-stellar-needs-lightecho-for-offchain-data-1.html  five-reasons-why-stellar-needs-lightecho-for-offchain-data-2.html  five-reasons-why-stellar-needs-lightecho-for-offchain-data.html  fiver-reasons-why-stellar-needs-lightecho-for-offchain-data.html  index.html  introducing-lightecho-a-next-generation-smart-contract-price-oracle-on-the-stellar-soroban-platform.html  oracle-pricing-five-reasons-why-stellar-needs-lightecho-for-offchain-data.html  stellar-oracle-live.html  stellar-xlm-price-2024.html  stellar-xlm-trading-2024.html  tags.html  xlm-volatility-pricing.html
output/author/: anthony.html  bpv.html  christian-larsen.html  lightecho-team.html
output/category/: oracle.html  posts.html  xlm.html
output/static/css/: styles.css
output/tag/: oracle.html  price.html  stellar.html  xlm.html
output/theme/css/: fonts.css  main.css
output/theme/js/: dark-light-mode.js
public/: index.xml  sitemap.xml
public/categories/: index.xml
public/posts/: index.xml
public/tags/: index.xml
(+6 files in other folders)
