[tool.poetry]
name = "lightecho-blog"
version = "0.1.0"
description = ""
authors = ["BP Ventures"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pelican = {extras = ["markdown"], version = "^4.8.0"}
markdown = "^3.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
